# Tg_bot_Avito

./: .env  docker-compose.yml  pyproject.toml
admin-panel/: Dockerfile  app.py  check_db.py  check_tables.py  requirements.txt
admin-panel/app/: __init__.py  auth.py  database.py  models.py
admin-panel/static/css/: style.css
admin-panel/static/js/: api.js  confirm.js  dashboard.js  instructions.js  main.js  settings.js  subscriptions.js  system.js  users.js  utils.js
admin-panel/templates/: index.html  login.html
admin-panel/templates/components/: charts.html  header.html  instructions_content.html  modals.html  recent_activity.html  settings_content.html  sidebar.html  stat_cards.html  subscriptions_content.html  system_content.html  users_content.html
admin-panel/templates/partials/: modals.html
bot/: Dockerfile  __init__.py  config.py  database.py  keyboards.py  main.py  payment_handler.py  requirements.txt  utils.py
bot2/: __main__.py  bot.py  config.py  database_engine.py  keyboards.py  logger.py  main.py  models.py  users.py
database/: init.sql
